# TabICL

./: .gitattributes  .gitignore  LICENSE  README.md  benchmark_tabicl.py  benchmark_tabicl_classification_amd.py  benchmark_tabicl_dp_serial.py  benchmark_tabicl_dynamic.py  benchmark_tabicl_dynamic_skip.py  pyproject.toml  tabicl-classifier-v1-0208.ckpt  tabicl-classifier-v1.1-0506.ckpt
.github/workflows/: testing.yml
limix/openml_cc18_csv/OpenML-ID-1049/: OpenML-ID-1049_test.csv  OpenML-ID-1049_train.csv  info.json
limix/openml_cc18_csv/OpenML-ID-1050/: OpenML-ID-1050_test.csv  OpenML-ID-1050_train.csv  info.json
limix/openml_cc18_csv/OpenML-ID-1053/: OpenML-ID-1053_test.csv  (+2 more)
result/ckpt/: summary_all_ckpts_talent_only.csv
result/ckpt_dir1/: summary_all_ckpts_talent_only.csv
results/official_classification_v1/: all_classification_results.csv  summary.txt  worker_0.csv  worker_1.csv  worker_2.csv  worker_3.csv  worker_4.csv  worker_5.csv
results/official_classification_v1.1/: all_classification_results.csv  summary.txt  worker_0.csv  worker_1.csv  worker_2.csv  worker_3.csv  worker_4.csv  worker_5.csv  worker_6.csv  worker_7.csv
results/test/: tabicl_talent.ALL.csv  tabicl_talent.summary.txt
results/v1.1_bs16/: tabicl_openml_cc18.ALL.csv  tabicl_openml_cc18.summary.txt  tabicl_tabzilla.ALL.csv  tabicl_tabzilla.summary.txt  tabicl_talent.ALL.csv  tabicl_talent.summary.txt
results/v1.1_dp_serial/: tabicl_talent.ALL.csv  tabicl_talent.summary.txt
results/v1.1_dynamic/: .tabicl_talent.ALL.csv.swp  tabicl_openml_cc18.ALL.csv  tabicl_openml_cc18.summary.txt  tabicl_tabzilla.ALL.csv  tabicl_tabzilla.summary.txt  tabicl_talent.ALL.csv  tabicl_talent.summary.txt
results/v1.1_parallel_3+3+2/: tabicl_openml_cc18.ALL.csv  tabicl_openml_cc18.summary.txt  tabicl_tabzilla.ALL.csv  tabicl_tabzilla.summary.txt  tabicl_talent.ALL.csv  tabicl_talent.summary.txt
results/v1_dynamic/: tabicl_openml_cc18.ALL.csv  tabicl_openml_cc18.summary.txt  tabicl_tabzilla.ALL.csv  tabicl_tabzilla.summary.txt  tabicl_talent.ALL.csv  tabicl_talent.summary.txt
scripts/: train_stage1.sh  train_stage2.sh  train_stage3.sh
scripts/dp/: amd.sh  bs.sh
scripts/run/: amd.sh  ckpt.sh  ckpt_wait1.sh  ckpt_wait2.sh  openml_cc18.sh  run_official_classification_v1.1_amd.sh  run_official_classification_v1_amd.sh  run_tabicl_all.sh  tabzilla.sh  talent.sh  v1.1_bs16.sh  v1.1_parallel_3+3+2.sh  v1.sh
src/tabicl/: __init__.py
tests/: test_sklearn.py
(+19456 files in other folders)
